--- a/Server/package.json
+++ b/Server/package.json
@@ -3,5 +3,16 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.5.2",
     "express": "^4.18.2"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
