--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "cd Server && nodemon src/server.js",
-    "client": "cd Client && npm start",
-    "watch": "npm run server & npm run client",
+    "server": "npm start --prefix Server",
+    "client": "npm start --prefix Client",
+    "start": "npm run server & npm run client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
