--- a/Server/package.json
+++ b/Server/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.5.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
