--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.5.2",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.3.0"
   },
   "name": "server",
   "version": "1.0.0",
