--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client": "npm start --prefix Client",
     "start": "npm run server & npm run client",
     "deploy": "npm run build --prefix Client && npm start --prefix Server",
+    "deploy-cluster": "npm run build --prefix Client && npm run cluster --prefix Server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
