--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.js",
+    "cluster": "pm2 start src/server.js -i max",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
