--- a/Server/package.json
+++ b/Server/package.json
@@ -11,7 +11,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
