--- a/Server/package.json
+++ b/Server/package.json
@@ -17,5 +17,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
