--- a/Server/package.json
+++ b/Server/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
