--- a/Server/package.json
+++ b/Server/package.json
@@ -13,12 +13,14 @@
   "scripts": {
     "start": "node src/server.js",
     "cluster": "pm2 start src/server.js -i max",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
