--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,9 @@
     "test": "jest",
     "test-watch": "jest --watch"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
