--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           node-version: "20"
       - run: npm install
+      - run: npm install --prefix Client
       - run: npm run build --prefix Client
