--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,6 +6,8 @@ on:
     branches: [master]
 jobs:
   build:
+    env:
+      CI: true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -16,3 +18,4 @@ jobs:
       - run: npm install
       - run: npm install --prefix Client
       - run: npm run build --prefix Client
+      - run: npm test
