--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -18,4 +18,4 @@ jobs:
       - run: npm install
       - run: npm install --prefix Client
       - run: npm run build --prefix Client
-      - run: npm run test
+      - run: npm  test
