--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run server & npm run client",
     "deploy": "npm run build --prefix Client && npm start --prefix Server",
     "deploy-cluster": "npm run build --prefix Client && npm run cluster --prefix Server",
-    "test": "npm run test --prefix Server && npm run test --prefix Client"
+    "test": "npm  test --prefix Server && npm test --prefix Client"
   },
   "keywords": [],
   "author": "",
