--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost/nasa
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,7 +16,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+      - name: MongoDB in GitHub Actions
+        uses: supercharge/mongodb-github-action@1.10.0
+
       - run: npm install
       - run: npm install --prefix Client
       - run: npm run build --prefix Client
-      - run: npm  test
+      - run: npm test
