--- a/Server/package.json
+++ b/Server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.2",
